[gd_scene format=3 uid="uid://bu5whi6c50je7"]

[ext_resource type="Script" uid="uid://wxreyo2c0syp" path="res://scripts/credits_menu.gd" id="1_27l6r"]

[node name="CreditsMenu" type="Control" unique_id=1907394227]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27l6r")

[node name="Panel" type="Panel" parent="." unique_id=216688349]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="BackButton" type="Button" parent="." unique_id=179790286]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -47.0
offset_right = 31.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
text = "Return"

[node name="AssetsPanel" type="Panel" parent="." unique_id=1547965935]
layout_mode = 1
offset_left = 40.0
offset_top = 31.0
offset_right = 268.0
offset_bottom = 280.0

[node name="Label" type="Label" parent="AssetsPanel" unique_id=44541893]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -43.5
offset_top = 8.0
offset_right = 43.5
offset_bottom = 47.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Assets"

[node name="Label2" type="Label" parent="AssetsPanel" unique_id=1537046556]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -105.0
offset_top = 53.0
offset_right = 105.0
offset_bottom = 92.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 12
text = "Click on one of the buttons below
to display a license/attribution."
horizontal_alignment = 1

[node name="LicenseButton1" type="Button" parent="AssetsPanel" unique_id=412640712]
layout_mode = 0
offset_left = 20.0
offset_top = 109.0
offset_right = 206.0
offset_bottom = 140.0
text = "flappy-bird-assets"

[node name="LicenseButton2" type="Button" parent="AssetsPanel" unique_id=2035907476]
layout_mode = 0
offset_left = 20.0
offset_top = 157.0
offset_right = 206.0
offset_bottom = 188.0
text = "Flappy Bird Assets"

[node name="LicenseButton3" type="Button" parent="AssetsPanel" unique_id=502359665]
layout_mode = 0
offset_left = 20.0
offset_top = 205.0
offset_right = 206.0
offset_bottom = 236.0
text = "plane_pack"

[node name="Panel2" type="Panel" parent="." unique_id=1676349136]
layout_mode = 1
offset_left = 40.0
offset_top = 357.0
offset_right = 268.0
offset_bottom = 576.0

[node name="Label" type="Label" parent="Panel2" unique_id=78447000]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 8.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 19
text = "Flappy Plane"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel2" unique_id=2105636929]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 33.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 11
text = "v2.0 (11022026)"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Panel2" unique_id=430198896]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 73.0
offset_right = -5.0
offset_bottom = 208.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 14
text = "Made By:

Source Code:

This software is open-source
provided under the MIT License."

[node name="LinkButton" type="LinkButton" parent="Panel2/Label3" unique_id=2068082554]
layout_mode = 1
offset_left = 67.0
offset_right = 172.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 14
text = "Matyáš Trnka"
uri = "https://matrn.dev"

[node name="LinkButton2" type="LinkButton" parent="Panel2/Label3" unique_id=1706173624]
layout_mode = 1
offset_left = 92.0
offset_top = 46.0
offset_right = 197.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 14
text = "Project's GitHub"
uri = "https://github.com/matrndev/flappy-plane"

[node name="TextEdit" type="TextEdit" parent="." unique_id=220790442]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -854.0
offset_top = 30.0
offset_right = -69.0
offset_bottom = 577.0
grow_horizontal = 0
editable = false
wrap_mode = 1

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="AssetsPanel/LicenseButton1" to="." method="_on_license_button_1_pressed"]
[connection signal="pressed" from="AssetsPanel/LicenseButton2" to="." method="_on_license_button_2_pressed"]
[connection signal="pressed" from="AssetsPanel/LicenseButton3" to="." method="_on_license_button_3_pressed"]
